Simplify pytest command in GitHub Actions workflow

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,4 +25,4 @@ jobs:
       # Exécution des tests Python
       - name: Run Python tests
         run: |
-          pytest main.py
+          pytest
